tests/snapshots/help_test__core_help_output.snap
---
source: tests/help_test.rs
assertion_line: 51
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
Show or reconcile which specs are globally mounted

Usage: akm skills core [OPTIONS]

Options:
      --adopt    Drop local overrides and follow the registry's defaults
      --publish  Make this machine's core choices the registry defaults
  -h, --help     Print help
  -V, --version  Print version
