tests/snapshots/help_test__help_output.snap
---
source: tests/help_test.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
Agent Kit Manager — manage reusable LLM skills, artifacts, and instructions

Usage: akm [COMMAND]

Commands:
  setup         Interactive feature configuration
  config        View, get, or set configuration values
  sync          Sync all enabled features (skills, artifacts, instructions)
  update        Check for a new release and self-update the akm binary
  skills        Skills management (defaults to `list` when no subcommand is given)
  artifacts     Browse artifacts, or sync (defaults to the explorer with no subcommand)
  instructions  Global instruction management
  harness       Sync harness configs (themes, settings) across machines
  completions   Generate shell completion script
  disable       Turn off shell integration so harnesses run vanilla (reversible)
  enable        Re-enable shell integration after `akm disable`
  uninstall     Remove akm from this machine
  help          Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Examples:
  akm setup                      # interactive feature configuration
  akm sync                       # sync all enabled features
  akm skills add vitest tdd      # add specs to project manifest
  akm skills list --type skill   # list all skills
  akm skills import <github-url> # import a skill from a GitHub URL
  akm artifacts sync             # sync artifacts repo
  akm config artifacts.auto-push false
