tests/snapshots/help_test__import_help_output.snap
---
source: tests/help_test.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
Import a skill from a GitHub URL or a shared registry

SOURCE is either a GitHub URL or the name of a configured shared
registry. Give SKILL_ID to take one skill from a registry, or --all to
take every valid skill the source offers.

Examples:
  akm skills import https://github.com/acme/kit/tree/main/skills/tdd
  akm skills import acme tdd
  akm skills import acme --all

Usage: akm skills import [OPTIONS] <SOURCE> [SKILL_ID]

Arguments:
  <SOURCE>
          GitHub URL, or the name of a configured shared registry

  [SKILL_ID]
          Skill to take from a shared registry

Options:
      --all
          Import every valid skill the source offers

      --force
          Overwrite without confirmation

      --id <ID>
          Store the skill under this ID instead

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
